test/disabled/neg/macro-keyword-trait2.check
macro-keyword-trait2.scala:2: error: identifier expected but 'macro' found.
  trait macro
        ^
one error found
